starting on structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div>
+<div class="container">
   <app-navbar></app-navbar>
-  <div>
+  <div class="product-container">
     <app-light-gallery></app-light-gallery>
     <app-product-card></app-product-card>
   </div>
