--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,15 @@
 <mat-toolbar>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>SNEAKERS</span>
+  <span>sneakers</span>
+  <button mat-button>Collections</button>
+  <button mat-button>Men</button>
+  <button mat-button>Women</button>
+  <button mat-button>About</button>
+  <button mat-button>Contact</button>
   <span class="spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>favorite</mat-icon>
+  <button mat-icon-button class="icon material-symbols-outlined" aria-label="cart icon">
+    <mat-icon>shopping_cart</mat-icon>
   </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-    <mat-icon>share</mat-icon>
+  <button mat-icon-button class="icon material-symbols-outlined" aria-label="account icon">
+      <mat-icon>account_circle</mat-icon>
   </button>
 </mat-toolbar>
