aded fake data, a few more components

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,15 +1,15 @@
 <mat-toolbar>
-  <span>sneakers</span>
-  <button mat-button>Collections</button>
-  <button mat-button>Men</button>
-  <button mat-button>Women</button>
-  <button mat-button>About</button>
-  <button mat-button>Contact</button>
+  <span class="brand">sneakers</span>
+  <button mat-button class="collections" [routerLink]="['/collections']">Collections</button>
+  <button mat-button class="mens" [routerLink]="['/mens']">Men</button>
+  <button mat-button class="womens" [routerLink]="['/womens']">Women</button>
+  <button mat-button class="about" [routerLink]="['/about']">About</button>
+  <button mat-button class="Contact" [routerLink]="['/contact']">Contact</button>
   <span class="spacer"></span>
-  <button mat-icon-button class="icon material-symbols-outlined" aria-label="cart icon">
+  <button mat-icon-button class="icon material-symbols-outlined cart" aria-label="cart icon">
     <mat-icon>shopping_cart</mat-icon>
   </button>
-  <button mat-icon-button class="icon material-symbols-outlined" aria-label="account icon">
+  <button mat-icon-button class="icon material-symbols-outlined user" aria-label="account icon">
       <mat-icon>account_circle</mat-icon>
   </button>
 </mat-toolbar>
