--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="container">
   <app-navbar></app-navbar>
   <div class="product-container">
-    <app-light-gallery></app-light-gallery>
-    <app-product-card></app-product-card>
+    <router-outlet></router-outlet>
   </div>
 </div>
