--- a/src/app/collections-page/collections-page.component.html
+++ b/src/app/collections-page/collections-page.component.html
@@ -1,1 +1,14 @@
-<p>collections-page works!</p>
+<div class="container">
+  <div class="collections-container">
+    <mat-card class="report clickable">
+      <img src="assets/image-product-1-thumbnail.jpg">
+      <div class="info">
+<!--        <p class="name">{{ product.name }}</p>-->
+<!--        <p class="">{{ price }}</p>-->
+<!--        <p class="desc">{{ description }}</p>-->
+      </div>
+    </mat-card>
+  </div>
+</div>
+
+<!--(click)="goToProduct(id)"-->
