fixed injector error

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar>
   <span class="brand"><img src="./assets/logo.svg" alt=""></span>
-  <button mat-button class="collections" [routerLink]="['/collections']" routerLinkActive="active">Collections</button>
-  <button mat-button class="mens" [routerLink]="['/mens']">Men</button>
-  <button mat-button class="womens" [routerLink]="['/womens']">Women</button>
-  <button mat-button class="about" [routerLink]="['/about']">About</button>
-  <button mat-button class="Contact" [routerLink]="['/contact']">Contact</button>
+  <button mat-button class="collections" [routerLink]="['/collections']">Collections</button>
+  <button mat-button class="mens">Men</button>
+  <button mat-button class="womens">Women</button>
+  <button mat-button class="about">About</button>
+  <button mat-button class="contact">Contact</button>
   <span class="spacer"></span>
   <button mat-icon-button class="icon material-symbols-outlined cart" aria-label="cart icon">
     <mat-icon>shopping_cart</mat-icon>
