made more changes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,4 @@
-.product-container {
+.container {
   display: flex;
-  flex-direction: row;
-  margin: 1rem;
-  padding: 1rem;
+  flex-direction: column;
 }
