--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <span class="brand"><img src="./assets/logo.svg" alt=""></span>
+  <span class="brand"><img src="./assets/FEMentor/logo.svg" alt=""></span>
   <button mat-button class="collections" [routerLink]="['/collections']">Collections</button>
   <button mat-button class="mens">Men</button>
   <button mat-button class="womens">Women</button>
@@ -9,5 +9,5 @@
   <button mat-icon-button class="icon material-symbols-outlined cart" aria-label="cart icon">
     <mat-icon>shopping_cart</mat-icon>
   </button>
-  <img class="avatar" src="./assets/image-avatar.png" alt="">
+  <img class="avatar" src="./assets/FEMentor/image-avatar.png" alt="">
 </mat-toolbar>
