--- a/src/app/components/collections-page/collections-page.component.html
+++ b/src/app/components/collections-page/collections-page.component.html
@@ -1,12 +1,8 @@
 <div class="collections-container">
-  <mat-card class="collection" *ngFor="let product of allProduct">
-    <img ngSrc="" height="176" width="176" alt="stock image">
+  <mat-card class="collection" *ngFor="let collection of allCollections">
+    <img src="{{ collection.imgURL }}" height="176" width="176" alt="stock image">
     <div class="info">
-      <p class="name">{{ product.name }}</p>
-      <p class="">{{ product.price }}</p>
-      <p class="desc">{{ product.description }}</p>
+      <h1 class="name">{{ collection.name }}</h1>
     </div>
   </mat-card>
 </div>
-
-<!--(click)="goToProduct(id)"-->
