started adding light gallery

--- a/src/app/components/collections-page/collections-page.component.html
+++ b/src/app/components/collections-page/collections-page.component.html
@@ -1,5 +1,5 @@
 <div class="collections-container">
-  <mat-card class="collection" *ngFor="let collection of allCollections">
+  <mat-card class="collection" *ngFor="let collection of allCollections" [routerLink]="collection.endpoint">
     <img src="{{ collection.imgURL }}" height="176" width="176" alt="stock image">
     <div class="info">
       <h1 class="name">{{ collection.name }}</h1>
