removed light gallery

--- a/src/app/components/mens-page/mens-page.component.html
+++ b/src/app/components/mens-page/mens-page.component.html
@@ -1,6 +1,4 @@
-<lightgallery [settings]="settings" [onInit]="onInit">
-  <a *ngFor="let item of items" [attr.data-lg-size]="item.size" class="gallery-item" [attr.href]="item.src">
-    <img class="img-responsive" src="{{ item.thumb }}"  alt="an image"/>
-  </a>
-</lightgallery>
+<p>mens page works!</p>
+
+
 
