--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar>
   <span class="brand"><img src="./assets/FEMentor/logo.svg" alt=""></span>
   <button mat-button class="collections" [routerLink]="['/collections']">Collections</button>
-  <button mat-button class="mens">Men</button>
-  <button mat-button class="womens">Women</button>
+  <button mat-button class="mens" [routerLink]="['/mens']">Men</button>
+  <button mat-button class="womens" [routerLink]="['/womens']">Women</button>
   <button mat-button class="about">About</button>
   <button mat-button class="contact">Contact</button>
   <span class="spacer"></span>
