--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -1,26 +1,24 @@
-:host {
-  display: block;
-  padding: 1rem;
-}
-
 .container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   padding: 1rem;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 .image-view {
   margin: 1rem;
-  width: 100%;
+  height: 50%;
+  width: 50%;
 }
 
 .details-container {
   margin: 1rem;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 600px;
 }
 
 add-to-cart {
@@ -36,5 +34,5 @@ add-to-cart {
 }
 
 .example-full-width {
-  width: 100%;
+  width: 50%;
 }
