--- a/src/app/components/mens-page/mens-page.component.html
+++ b/src/app/components/mens-page/mens-page.component.html
@@ -1,4 +1,11 @@
-<p>mens page works!</p>
+<div class="container">
+  <mat-card class="collection" *ngFor="let product of mensProducts" [routerLink]="product">
+    <img src="{{ product.imgURL }}" height="176" width="176" alt="stock image">
+    <div class="info">
+      <h5 class="name">{{ product.name }}</h5>
+    </div>
+  </mat-card>
+</div>
 
 
 
