rxjs filter doesn't seem to be working

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,16 @@
-.container {
+.main-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+
+}
+
+
+.greeting {
+  margin-left: 40rem;
+  margin-top: 10rem;
+}
+
+.hidden {
+  display: none;
 }
