OH MY GOSH IT DOES A THING

--- a/src/app/components/mens-page/mens-page.component.html
+++ b/src/app/components/mens-page/mens-page.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-card class="collection" *ngFor="let item of items" [routerLink]="['/product', item.id]">
+  <mat-card class="collection" *ngFor="let item of items | async" [routerLink]="['/product', item.id]">
     <img src="{{ item.imgURL }}" height="176" width="176" alt="stock image">
     <div class="info">
       <h5 class="name">{{ item.name }}</h5>
