--- a/src/app/components/collections-page/collections-page.component.html
+++ b/src/app/components/collections-page/collections-page.component.html
@@ -5,5 +5,5 @@
       <h1 class="name">{{ collection.name }}</h1>
     </div>
   </mat-card>
-  <p [routerLink]="['/product']">Go to Product page</p>
+  <p [routerLink]="['product/:id',]">Go to Product page</p>
 </div>
