i might be close

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -5,10 +5,10 @@
 
   <div class="details-container">
     <h5>SNEAKER COMPANY</h5>
-    <h1>product.name</h1>
-    <p>description</p>
-    <h1>sale</h1> <h5>percentage</h5>
-    <h5>price</h5>
+    <h1>{{ itemName }}</h1>
+    <p>{{ itemDesc }}</p>
+    <h1>{{ itemMarkdown }}</h1> <h5>percentage</h5>
+    <h5>{{ itemPrice }}</h5>
 
     <div class="add-to-cart">
       <form class="example-form">
